[package]
name = "treez"
version = "0.7.2"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
description = "A collection of useful tree data structures."
repository = "https://github.com/clearlycloudy/treez/"
keywords = [ "segment", "red-black", "autograd", "sarsa", "mtcs" ]
license = "BSD-2-Clause"
documentation = "https://docs.rs/treez/0.1.5/treez/"
readme = "README.md"

[dependencies]
rand = "0.3"
chrono = "0.4.0"

[lib]
name = "treez"
path = "src/mod.rs"