[package]
name = "treez"
version = "1.5.0"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
description = "A collection of useful data structures."
repository = "https://github.com/clearlycloudy/treez/"
keywords = [ "data-structures", "utility" ]
license = "BSD-2-Clause"
documentation = "https://docs.rs/treez/1.4.1/treez/"
readme = "README.md"

[dependencies]
rand = "0.7.3"
chrono = "0.4.0"
num = "0.1.41"
mazth = "0.0.0"
crossbeam = "0.4.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_rb"
harness = false

[lib]
name = "treez"
path = "src/mod.rs"